<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <include
        layout="@layout/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/current_date"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:background="@drawable/date_time_background"
                    app:drawableEndCompat="@drawable/drop_down_arrow" />

                <TextView
                    android:id="@+id/timePicker"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/current_time"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:paddingEnd="10dp"
                    android:background="@drawable/date_time_background"
                    app:drawableEndCompat="@drawable/drop_down_arrow" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/fieldRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:checked="true"
                    android:text="@string/field_work"
                    android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/workText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/work_with"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">
                <RadioButton
                    android:id="@+id/yesRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:checked="true"
                    android:paddingStart="10dp"
                    android:text="@string/yes"
                    android:textSize="16sp" />


                <RadioButton
                    android:id="@+id/noRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="10dp"
                    android:text="@string/no"
                    android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/custom_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/product"
                    android:textColor="@color/black"
                    android:background="@drawable/date_time_background"
                    android:drawableEnd="@drawable/right_arrow"
                    android:paddingEnd="10dp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/customField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/custom_field_work"
                    android:textSize="12sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/voiceIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/microphone" />

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/search" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edt_border_line"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/feedback_action_discussion" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/this_report_needs_to_be_approved"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/why"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/report"
                    android:text="@string/why"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/rounded_button_background"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:textSize="20sp" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>